--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "serve": "tsc && node build/index.js",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "nodemon",
+    "migrate": "sequelize db:migrate",
+    "migrate:reset": "sequelize db:migrate:undo:all && yarn migrate",
+    "seed:all": "sequelize db:seed:all",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "pretest": "cross-env NODE_ENV=test yarn migrate:reset && cross-env NODE_ENV=test yarn seed:all"
   },
   "repository": {
     "type": "git",
@@ -15,16 +18,28 @@
   "author": "Damjan Veljkovic",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status-codes": "^1.4.0",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "sequelize": "^5.21.3",
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1",
+    "uid-generator": "^2.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.24",
     "@types/node": "^13.1.0",
+    "cross-env": "^6.0.3",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.2",
+    "should": "^13.2.3",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
